<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp">


    <TextView
        android:id="@+id/shoename_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/shoe_name"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/shoename_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/company"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
    android:id="@+id/shoesize_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/shoe_size"
    android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/shoedescription_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textAppearance="?attr/textAppearanceListItem" />
</LinearLayout>