<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/shoename_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_name"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/shoename_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/company"
            android:textAppearance="?attr/textAppearanceListItem" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/shoesize_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_size"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/shoedescription_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textAppearance="?attr/textAppearanceListItem" />


    </LinearLayout>
</androidx.cardview.widget.CardView>